added sign in button and eng/span options

--- a/Projects/challenges/netchix/login.html
+++ b/Projects/challenges/netchix/login.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <div class="outer_container">
-        <img src="../netchix/static/background_movies.jpeg" alt="Movie Titles">
+        <img class="background_movie_titles" src="../netchix/static/background_movies.jpeg" alt="Movie Titles">
         <div class="header">
-            <h1>Netflix</h1>
+            <h1>Netchix</h1>
+            <select name="language" id="language">
+                <option value="english">English</option>
+                <option value="spanish">Spanish</option>
+            </select>
+            <div class="sign_in">
+                <button value="sign_in">Sign in</button>
+            </div>
         </div>
 
         
