fixed picture background and took away margins

--- a/Projects/challenges/netchix/login.html
+++ b/Projects/challenges/netchix/login.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../netchix/static/style.css">
     <title>Netflix</title>
 </head>
 <body>
     <div class="outer_container">
-        <img class="background_movie_titles" src="../netchix/static/background_movies.jpeg" alt="Movie Titles">
+        <!-- <img class="background_movie_titles" src="../netchix/static/background_movies.jpeg" alt="Movie Titles"> -->
         <div class="header">
             <h1>Netchix</h1>
             <select name="language" id="language">
