added primary color and netflix font

--- a/Projects/challenges/netchix/login.html
+++ b/Projects/challenges/netchix/login.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- LINKS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../netchix/static/style.css">
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Netflix</title>
 </head>
+
 <body>
     <div class="outer_container">
-        <!-- <img class="background_movie_titles" src="../netchix/static/background_movies.jpeg" alt="Movie Titles"> -->
-        <div class="header">
-            <h1>Netchix</h1>
-            <select name="language" id="language">
-                <option value="english">English</option>
-                <option value="spanish">Spanish</option>
-            </select>
-            <div class="sign_in">
-                <button value="sign_in">Sign in</button>
+            <!-- <img class="background_movie_titles" src="../netchix/static/background_movies.jpeg" alt="Movie Titles"> -->
+            <div class="header">
+                <div class="left_nav">
+                    <h1 class="netchix">Netchix</h1>
+                </div>
+                <div class="right_nav">
+                    <div class="header_select">
+                        <select name="language" id="language">
+                            <option value="english">English</option>
+                            <option value="spanish">Spanish</option>
+                        </select>
+                    </div>
+                    <div class="sign_in">
+                        <button value="sign_in">Sign in</button>
+                    </div>
             </div>
         </div>
 
-        
-        
+
+
     </div>
 </body>
+
 </html>
